Fix: Counting nights and human type. Feature: Unit-test added @DisplayName + use Given-When-Then + Rename teats Fix: Dove type accession